Compiladores/GabrielBonatto_NiccolasMaganeli/Projeto_Final/y.output
   0  $accept : input $end

   1  input :
   2        | input line
   3        | error NL

   4  line : NL
   5       | exp NL
   6       | cmd NL

   7  ParamFormais : ListaParams
   8               |

   9  ListaParams : ListaParams ',' IDENT
  10              | IDENT

  11  cmd : IDENT '=' exp ';'
  12      | IDENT PLUS_EQ exp ';'
  13      | IDENT TIMES_EQ exp ';'
  14      | IF '(' exp ')' cmd
  15      | IF '(' exp ')' cmd ELSE cmd
  16      | WHILE '(' exp ')' cmd
  17      | FOR '(' Exp ';' Exp ';' Exp ')' cmd

  18  $$1 :

  19  cmd : DEFINE IDENT '(' $$1 ParamFormais ')' '{' lcmd '}'
  20      | RETURN exp ';'
  21      | '{' lcmd '}'
  22      | exp

  23  Exp : exp
  24      | IDENT '=' exp
  25      |

  26  lcmd : lcmd cmd
  27       |

  28  exp : NUM
  29      | IDENT
  30      | exp '+' exp
  31      | exp '-' exp
  32      | exp '*' exp
  33      | exp '/' exp
  34      | exp '<' exp
  35      | exp '>' exp
  36      | exp GE exp
  37      | exp LE exp
  38      | exp EQUALS exp
  39      | exp DIFF exp
  40      | exp AND exp
  41      | exp OR exp
  42      | '!' exp
  43      | '-' exp
  44      | exp '^' exp
  45      | IDENT PLUS_PLUS
  46      | IDENT MINUS_MINUS
  47      | PLUS_PLUS IDENT
  48      | MINUS_MINUS IDENT

  49  $$2 :

  50  exp : IDENT '(' $$2 ParamsReais ')'
  51      | '(' exp ')'

  52  ParamsReais : ListaExpr
  53              |

  54  ListaExpr : ListaExpr ',' exp
  55            | exp

state 0
	$accept : . input $end  (0)
	input : .  (1)

	error  shift 1
	$end  reduce 1
	NL  reduce 1
	NUM  reduce 1
	PLUS_PLUS  reduce 1
	MINUS_MINUS  reduce 1
	DEFINE  reduce 1
	FOR  reduce 1
	IF  reduce 1
	WHILE  reduce 1
	RETURN  reduce 1
	IDENT  reduce 1
	'!'  reduce 1
	'-'  reduce 1
	'('  reduce 1
	'{'  reduce 1

	input  goto 2


state 1
	input : error . NL  (3)

	NL  shift 3
	.  error


state 2
	$accept : input . $end  (0)
	input : input . line  (2)

	$end  accept
	NL  shift 4
	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	DEFINE  shift 8
	FOR  shift 9
	IF  shift 10
	WHILE  shift 11
	RETURN  shift 12
	IDENT  shift 13
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	'{'  shift 17
	.  error

	exp  goto 18
	cmd  goto 19
	line  goto 20


state 3
	input : error NL .  (3)

	.  reduce 3


state 4
	line : NL .  (4)

	.  reduce 4


state 5
	exp : NUM .  (28)

	.  reduce 28


state 6
	exp : PLUS_PLUS . IDENT  (47)

	IDENT  shift 21
	.  error


state 7
	exp : MINUS_MINUS . IDENT  (48)

	IDENT  shift 22
	.  error


state 8
	cmd : DEFINE . IDENT '(' $$1 ParamFormais ')' '{' lcmd '}'  (19)

	IDENT  shift 23
	.  error


state 9
	cmd : FOR . '(' Exp ';' Exp ';' Exp ')' cmd  (17)

	'('  shift 24
	.  error


state 10
	cmd : IF . '(' exp ')' cmd  (14)
	cmd : IF . '(' exp ')' cmd ELSE cmd  (15)

	'('  shift 25
	.  error


state 11
	cmd : WHILE . '(' exp ')' cmd  (16)

	'('  shift 26
	.  error


state 12
	cmd : RETURN . exp ';'  (20)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 28


13: shift/reduce conflict (shift 31, reduce 29) on PLUS_PLUS
13: shift/reduce conflict (shift 32, reduce 29) on MINUS_MINUS
13: shift/reduce conflict (shift 34, reduce 29) on '('
state 13
	cmd : IDENT . '=' exp ';'  (11)
	cmd : IDENT . PLUS_EQ exp ';'  (12)
	cmd : IDENT . TIMES_EQ exp ';'  (13)
	exp : IDENT .  (29)
	exp : IDENT . PLUS_PLUS  (45)
	exp : IDENT . MINUS_MINUS  (46)
	exp : IDENT . '(' $$2 ParamsReais ')'  (50)

	PLUS_EQ  shift 29
	TIMES_EQ  shift 30
	PLUS_PLUS  shift 31
	MINUS_MINUS  shift 32
	'='  shift 33
	'('  shift 34
	NL  reduce 29
	NUM  reduce 29
	EQUALS  reduce 29
	DIFF  reduce 29
	GE  reduce 29
	LE  reduce 29
	AND  reduce 29
	OR  reduce 29
	DEFINE  reduce 29
	FOR  reduce 29
	IF  reduce 29
	ELSE  reduce 29
	WHILE  reduce 29
	RETURN  reduce 29
	IDENT  reduce 29
	'!'  reduce 29
	'<'  reduce 29
	'>'  reduce 29
	'-'  reduce 29
	'+'  reduce 29
	'*'  reduce 29
	'/'  reduce 29
	'^'  reduce 29
	'{'  reduce 29
	'}'  reduce 29


state 14
	exp : '!' . exp  (42)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 35


state 15
	exp : '-' . exp  (43)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 36


state 16
	exp : '(' . exp ')'  (51)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 37


state 17
	cmd : '{' . lcmd '}'  (21)
	lcmd : .  (27)

	.  reduce 27

	lcmd  goto 38


18: shift/reduce conflict (shift 39, reduce 22) on NL
state 18
	line : exp . NL  (5)
	cmd : exp .  (22)
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : exp . '^' exp  (44)

	NL  shift 39
	EQUALS  shift 40
	DIFF  shift 41
	GE  shift 42
	LE  shift 43
	AND  shift 44
	OR  shift 45
	'<'  shift 46
	'>'  shift 47
	'-'  shift 48
	'+'  shift 49
	'*'  shift 50
	'/'  shift 51
	'^'  shift 52


state 19
	line : cmd . NL  (6)

	NL  shift 53
	.  error


state 20
	input : input line .  (2)

	.  reduce 2


state 21
	exp : PLUS_PLUS IDENT .  (47)

	.  reduce 47


state 22
	exp : MINUS_MINUS IDENT .  (48)

	.  reduce 48


state 23
	cmd : DEFINE IDENT . '(' $$1 ParamFormais ')' '{' lcmd '}'  (19)

	'('  shift 54
	.  error


state 24
	cmd : FOR '(' . Exp ';' Exp ';' Exp ')' cmd  (17)
	Exp : .  (25)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 55
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	';'  reduce 25

	exp  goto 56
	Exp  goto 57


state 25
	cmd : IF '(' . exp ')' cmd  (14)
	cmd : IF '(' . exp ')' cmd ELSE cmd  (15)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 58


state 26
	cmd : WHILE '(' . exp ')' cmd  (16)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 59


27: shift/reduce conflict (shift 31, reduce 29) on PLUS_PLUS
27: shift/reduce conflict (shift 32, reduce 29) on MINUS_MINUS
27: shift/reduce conflict (shift 34, reduce 29) on '('
state 27
	exp : IDENT .  (29)
	exp : IDENT . PLUS_PLUS  (45)
	exp : IDENT . MINUS_MINUS  (46)
	exp : IDENT . '(' $$2 ParamsReais ')'  (50)

	PLUS_PLUS  shift 31
	MINUS_MINUS  shift 32
	'('  shift 34
	NL  reduce 29
	NUM  reduce 29
	EQUALS  reduce 29
	DIFF  reduce 29
	GE  reduce 29
	LE  reduce 29
	AND  reduce 29
	OR  reduce 29
	DEFINE  reduce 29
	FOR  reduce 29
	IF  reduce 29
	ELSE  reduce 29
	WHILE  reduce 29
	RETURN  reduce 29
	IDENT  reduce 29
	'!'  reduce 29
	'<'  reduce 29
	'>'  reduce 29
	'-'  reduce 29
	'+'  reduce 29
	'*'  reduce 29
	'/'  reduce 29
	'^'  reduce 29
	','  reduce 29
	';'  reduce 29
	')'  reduce 29
	'{'  reduce 29
	'}'  reduce 29


state 28
	cmd : RETURN exp . ';'  (20)
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : exp . '^' exp  (44)

	EQUALS  shift 40
	DIFF  shift 41
	GE  shift 42
	LE  shift 43
	AND  shift 44
	OR  shift 45
	'<'  shift 46
	'>'  shift 47
	'-'  shift 48
	'+'  shift 49
	'*'  shift 50
	'/'  shift 51
	'^'  shift 52
	';'  shift 60
	.  error


state 29
	cmd : IDENT PLUS_EQ . exp ';'  (12)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 61


state 30
	cmd : IDENT TIMES_EQ . exp ';'  (13)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 62


state 31
	exp : IDENT PLUS_PLUS .  (45)

	.  reduce 45


state 32
	exp : IDENT MINUS_MINUS .  (46)

	.  reduce 46


state 33
	cmd : IDENT '=' . exp ';'  (11)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 63


state 34
	exp : IDENT '(' . $$2 ParamsReais ')'  (50)
	$$2 : .  (49)

	.  reduce 49

	$$2  goto 64


35: shift/reduce conflict (shift 40, reduce 42) on EQUALS
35: shift/reduce conflict (shift 41, reduce 42) on DIFF
state 35
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : '!' exp .  (42)
	exp : exp . '^' exp  (44)

	EQUALS  shift 40
	DIFF  shift 41
	GE  shift 42
	LE  shift 43
	'<'  shift 46
	'>'  shift 47
	'-'  shift 48
	'+'  shift 49
	'*'  shift 50
	'/'  shift 51
	'^'  shift 52
	NL  reduce 42
	NUM  reduce 42
	AND  reduce 42
	OR  reduce 42
	PLUS_PLUS  reduce 42
	MINUS_MINUS  reduce 42
	DEFINE  reduce 42
	FOR  reduce 42
	IF  reduce 42
	ELSE  reduce 42
	WHILE  reduce 42
	RETURN  reduce 42
	IDENT  reduce 42
	'!'  reduce 42
	','  reduce 42
	';'  reduce 42
	'('  reduce 42
	')'  reduce 42
	'{'  reduce 42
	'}'  reduce 42


36: shift/reduce conflict (shift 40, reduce 43) on EQUALS
36: shift/reduce conflict (shift 41, reduce 43) on DIFF
state 36
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : '-' exp .  (43)
	exp : exp . '^' exp  (44)

	EQUALS  shift 40
	DIFF  shift 41
	NL  reduce 43
	NUM  reduce 43
	GE  reduce 43
	LE  reduce 43
	AND  reduce 43
	OR  reduce 43
	PLUS_PLUS  reduce 43
	MINUS_MINUS  reduce 43
	DEFINE  reduce 43
	FOR  reduce 43
	IF  reduce 43
	ELSE  reduce 43
	WHILE  reduce 43
	RETURN  reduce 43
	IDENT  reduce 43
	'!'  reduce 43
	'<'  reduce 43
	'>'  reduce 43
	'-'  reduce 43
	'+'  reduce 43
	'*'  reduce 43
	'/'  reduce 43
	'^'  reduce 43
	','  reduce 43
	';'  reduce 43
	'('  reduce 43
	')'  reduce 43
	'{'  reduce 43
	'}'  reduce 43


state 37
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : exp . '^' exp  (44)
	exp : '(' exp . ')'  (51)

	EQUALS  shift 40
	DIFF  shift 41
	GE  shift 42
	LE  shift 43
	AND  shift 44
	OR  shift 45
	'<'  shift 46
	'>'  shift 47
	'-'  shift 48
	'+'  shift 49
	'*'  shift 50
	'/'  shift 51
	'^'  shift 52
	')'  shift 65
	.  error


state 38
	cmd : '{' lcmd . '}'  (21)
	lcmd : lcmd . cmd  (26)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	DEFINE  shift 8
	FOR  shift 9
	IF  shift 10
	WHILE  shift 11
	RETURN  shift 12
	IDENT  shift 13
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	'{'  shift 17
	'}'  shift 66
	.  error

	exp  goto 67
	cmd  goto 68


state 39
	line : exp NL .  (5)

	.  reduce 5


state 40
	exp : exp EQUALS . exp  (38)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 69


state 41
	exp : exp DIFF . exp  (39)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 70


state 42
	exp : exp GE . exp  (36)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 71


state 43
	exp : exp LE . exp  (37)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 72


state 44
	exp : exp AND . exp  (40)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 73


state 45
	exp : exp OR . exp  (41)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 74


state 46
	exp : exp '<' . exp  (34)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 75


state 47
	exp : exp '>' . exp  (35)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 76


state 48
	exp : exp '-' . exp  (31)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 77


state 49
	exp : exp '+' . exp  (30)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 78


state 50
	exp : exp '*' . exp  (32)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 79


state 51
	exp : exp '/' . exp  (33)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 80


state 52
	exp : exp '^' . exp  (44)

	NUM  shift 5
	PLUS_PLUS  shift 6
	MINUS_MINUS  shift 7
	IDENT  shift 27
	'!'  shift 14
	'-'  shift 15
	'('  shift 16
	.  error

	exp  goto 81


state 53
	line : cmd NL .  (6)

	.  reduce 6


state 54
	cmd : DEFINE IDENT '(' . $$1 ParamFormais ')' '{' lcmd '}'  (19)
	$$1 : .  (18)

	.  reduce 18

	$$1  goto 82


state 55
	Exp : IDENT . '=' exp  (24)
	exp : IDENT .  (29)
	exp : IDENT . PLUS_PLUS  (45)
	exp : IDENT . MINUS_MINUS  (46)
	exp : IDENT . '(' $$2 ParamsReais ')'  (50)

	PLUS_PLUS  shift 31
	MINUS_MINUS  shift 32
	'='  shift 83
	'('  shift 34
	EQUALS  reduce 29
	DIFF  reduce 29
	GE  reduce 29
	LE  reduce 29
	AND  reduce 29
	OR  reduce 29
	'<'  reduce 29
	'>'  reduce 29
	'-'  reduce 29
	'+'  reduce 29
	'*'  reduce 29
	'/'  reduce 29
	'^'  reduce 29
	';'  reduce 29
	')'  reduce 29


state 56
	Exp : exp .  (23)
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : exp . '^' exp  (44)

	EQUALS  shift 40
	DIFF  shift 41
	GE  shift 42
	LE  shift 43
	AND  shift 44
	OR  shift 45
	'<'  shift 46
	'>'  shift 47
	'-'  shift 48
	'+'  shift 49
	'*'  shift 50
	'/'  shift 51
	'^'  shift 52
	';'  reduce 23
	')'  reduce 23


state 57
	cmd : FOR '(' Exp . ';' Exp ';' Exp ')' cmd  (17)

	';'  shift 84
	.  error


state 58
	cmd : IF '(' exp . ')' cmd  (14)
	cmd : IF '(' exp . ')' cmd ELSE cmd  (15)
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : exp . '^' exp  (44)

	EQUALS  shift 40
	DIFF  shift 41
	GE  shift 42
	LE  shift 43
	AND  shift 44
	OR  shift 45
	'<'  shift 46
	'>'  shift 47
	'-'  shift 48
	'+'  shift 49
	'*'  shift 50
	'/'  shift 51
	'^'  shift 52
	')'  shift 85
	.  error


state 59
	cmd : WHILE '(' exp . ')' cmd  (16)
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : exp . '^' exp  (44)

	EQUALS  shift 40
	DIFF  shift 41
	GE  shift 42
	LE  shift 43
	AND  shift 44
	OR  shift 45
	'<'  shift 46
	'>'  shift 47
	'-'  shift 48
	'+'  shift 49
	'*'  shift 50
	'/'  shift 51
	'^'  shift 52
	')'  shift 86
	.  error


state 60
	cmd : RETURN exp ';' .  (20)

	.  reduce 20


state 61
	cmd : IDENT PLUS_EQ exp . ';'  (12)
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : exp . '^' exp  (44)

	EQUALS  shift 40
	DIFF  shift 41
	GE  shift 42
	LE  shift 43
	AND  shift 44
	OR  shift 45
	'<'  shift 46
	'>'  shift 47
	'-'  shift 48
	'+'  shift 49
	'*'  shift 50
	'/'  shift 51
	'^'  shift 52
	';'  shift 87
	.  error


state 62
	cmd : IDENT TIMES_EQ exp . ';'  (13)
	exp : exp . '+' exp  (30)
	exp : exp . '-' exp  (31)
	exp : exp . '*' exp  (32)
	exp : exp . '/' exp  (33)
	exp : exp . '<' exp  (34)
	exp : exp . '>' exp  (35)
	exp : exp . GE exp  (36)
	exp : exp . LE exp  (37)
	exp : exp . EQUALS exp  (38)
	exp : exp . DIFF exp  (39)
	exp : exp . AND exp  (40)
	exp : exp . OR exp  (41)
	exp : exp . '^' exp  (44)
